2011-04-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        switch new-run-webkit-tests to using the new results file
        https://bugs.webkit.org/show_bug.cgi?id=58861

        * Scripts/webkitpy/layout_tests/layout_package/test_failures.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_failures_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:

2011-04-19  Renata Hodovan  <reni@webkit.org>

        Reviewed by Eric Seidel.

        Move the alignment related macros from Vector.h to new Alignment.h.
        https://bugs.webkit.org/show_bug.cgi?id=56000

        Adding the new file to the forwarding headers of Tools.

        * DumpRenderTree/ForwardingHeaders/wtf/Alignment.h: Added.

2011-04-19  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix for Win / wx 2.9 wxPython installation.

        * wx/packaging/build-win-installer.py:
        * wx/packaging/wxWebKitInstaller.iss.in:

2011-04-19  Adam Roben  <aroben@apple.com>

        Skip another accelerated-compositing-sensitive test when accelerated compositing is disabled

        * Scripts/old-run-webkit-tests: Skip media/controls-without-preload.html on Windows when
        accelerated compositing is disabled.

2011-04-19  Ojan Vafai  <ojan@chromium.org>

        Remove accidentally committed debug code.
        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:

2011-04-19  Brent Fulgham  <bfulgham@webkit.org>

        Unreviewed build correction.

        Avoid duplicate stub implementation of test routine
        for WinCairo build.

        * WebKitTestRunner/win/TestInvocationWin.cpp: Exclude
        WinCairo from using this stub.

2011-04-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        make results file work with audio and reftests
        https://bugs.webkit.org/show_bug.cgi?id=58860

        Also fix bug with timeout tests and store a bit in the JSON